<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="?attr/toolbarColor"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="30dp"
        android:id="@+id/nav_user_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/userphoto"
        app:civ_border_color="#c0c0c0"
        app:civ_border_width="2dp" />
    <TextView
        android:layout_marginTop="30dp"
        android:fontFamily="@font/chunkfive"
        android:textSize="13dp"
        android:textFontWeight="25dp"
        android:id="@+id/nav_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="10dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/toolbarTextColor" />
    <TextView
        android:textSize="10dp"
        android:layout_below="@+id/nav_username"
        android:id="@+id/nav_usermail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="?attr/toolbarTextColor" />

</RelativeLayout>
